3rdparty/proton-foundation-search-1.1.1/src/index/text/text_one_blob/inner/snapshots/proton_foundation_search__index__text__text_one_blob__inner__tests__content_size.snap
---
source: packages/search/src/index/text/text_one_blob/inner/tests.rs
expression: index
---
TextIndex {
    occurrences: {
        (
            EntryIndex(
                1,
            ),
            AttributeIndex(
                1,
            ),
        ),
        (
            EntryIndex(
                0,
            ),
            AttributeIndex(
                0,
            ),
        ),
    },
    tokens: [
        (
            "one",
            {
                OccurrenceRef(
                    0,
                ): {
                    ValueIndex(
                        0,
                    ): {
                        TokenPosition(
                            0,
                        ),
                    },
                },
                OccurrenceRef(
                    1,
                ): {
                    ValueIndex(
                        0,
                    ): {
                        TokenPosition(
                            0,
                        ),
                    },
                },
            },
        ),
        (
            "xxx",
            {
                OccurrenceRef(
                    0,
                ): {
                    ValueIndex(
                        1,
                    ): {
                        TokenPosition(
                            0,
                        ),
                    },
                },
            },
        ),
        (
            "yyy",
            {
                OccurrenceRef(
                    0,
                ): {
                    ValueIndex(
                        1,
                    ): {
                        TokenPosition(
                            4,
                        ),
                    },
                },
            },
        ),
        (
            "two",
            {
                OccurrenceRef(
                    1,
                ): {
                    ValueIndex(
                        0,
                    ): {
                        TokenPosition(
                            4,
                        ),
                    },
                },
            },
        ),
    ],
    trigrams: {
        "one": {
            TrigramPosition(
                0,
            ): {
                TokenRef(
                    0,
                ),
            },
        },
        "two": {
            TrigramPosition(
                0,
            ): {
                TokenRef(
                    3,
                ),
            },
        },
        "xxx": {
            TrigramPosition(
                0,
            ): {
                TokenRef(
                    1,
                ),
            },
        },
        "yyy": {
            TrigramPosition(
                0,
            ): {
                TokenRef(
                    2,
                ),
            },
        },
    },
    stats: Stats {
        sizes: {
            AttributeIndex(
                0,
            ): {
                EntryIndex(
                    0,
                ): (
                    6,
                    2,
                ),
            },
            AttributeIndex(
                1,
            ): {
                EntryIndex(
                    1,
                ): (
                    9,
                    3,
                ),
            },
        },
    },
}
