3rdparty/proton-foundation-search-1.1.1/src/index/text/text_one_blob/inner/snapshots/proton_foundation_search__index__text__text_one_blob__inner__tests__should_find_inserted_token.snap
---
source: packages/search/src/index/text/inner/tests.rs
expression: "index.get_token_ids_exact(&[\"token\".into()])"
---
{
    TokenRef(
        0,
    ),
}
